Fix crowded collapsed navbar

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -211,6 +211,14 @@ main ul {
     display: none;
   }
 
+  .slanted-btn.selected {
+    padding: 0.75rem 1rem;
+  }
+
+  .navbar-nav {
+    gap: 30px;
+  }
+
   .skills-list {
     flex-direction: column;
     gap: 30px;
